--- a/box.html
+++ b/box.html
@@ -16,6 +16,7 @@
                 flex-direction:column;
                 background-color: lightblue;
                 height:96vh;
+                width:96vw;
                 background-size: cover;
        }
       *{
@@ -186,4 +187,5 @@ function calculateMarks() {
 }
 </script>
 </body>
+
 </html>
